# AntiDupe-Gallery

./: README.md  build.gradle  gradle.properties  settings.gradle
app/: .gitignore  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: adg_logo_foreground.xml  ic_adg_logo_foreground.xml  ic_back_arrow.xml  ic_back_arrow_white.xml  ic_check.xml  ic_email.xml  ic_info.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_video.xml
app/src/main/res/layout/: about_activity.xml  album_activity.xml  album_card.xml  dialog_enter_pin.xml  dialog_info.xml  dialog_scroll.xml  dialog_sorting.xml  filter_activity.xml  filter_card.xml  folder.xml  folder_card.xml  folder_view.xml  image_view.xml  images_activity.xml  main_activity.xml  pin_activity.xml  settings_activity.xml  thumbnail_card.xml
app/src/main/res/menu/: main_popup_menu.xml
app/src/main/res/mipmap-anydpi/: ic_launcher.xml  ic_launcher_round.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-hu/: strings.xml
app/src/main/res/values-night/: colors.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  (+1 more)
backend/: Cargo.toml  rustfmt.toml
backend/.cargo/: config.toml
backend/backend-lib/: Cargo.toml
backend/backend-lib/src/: digest.rs  hash.rs  lib.rs  log.rs  logger.rs
backend/backend-lib/src/android/: exports.rs  mod.rs
backend/backend-proc-macro/: Cargo.toml
backend/backend-proc-macro/src/: lib.rs
backend/src/: lib.rs
gradle/wrapper/: gradle-wrapper.properties
(+89 files in other folders)
