[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.21.1"
backend-proc-macro = { path = "../backend-proc-macro/" }
const_format = "0.2.32"
anyhow = "1.0.75"
hex = "0.4.3"
tokio = { version = "1.34.0", features = ["rt", "fs", "sync", "macros"] }
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio"] }
log = "0.4.20"
sha2 = "0.10.8"
# opencv = "0.88.8"
